# nixl

./: .clang-format  .pre-commit-config.yaml  ATTRIBUTIONS-CPP.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  CODEOWNERS  Cargo.toml  README.md  meson.build  meson_options.txt  pyproject.toml
.ci/: cidemo-init.sh
.ci/dockerfiles/: Dockerfile.base  Dockerfile.build_helper  Dockerfile.gpu-test  Dockerfile.infinia-libs
.ci/docs/: build-wheel-matrix-ci.md
.ci/jenkins/lib/: build-container-matrix.yaml  build-matrix.yaml  build-wheel-matrix.yaml  test-dl-matrix.yaml  test-matrix.yaml
.ci/jenkins/pipeline/: Jenkinsfile  proj-jjb.yaml
.ci/scripts/: artifactory-cleanup-by-time.sh  run_slurm_allocation.sh  run_tests_slurm.sh  stop_slurm_allocation.sh
.gitlab/: build.sh  test_azure.sh  test_cpp.sh  test_nixlbench.sh  test_plugins.sh  test_python.sh  test_rust.sh
benchmark/kvbench/commands/: args.py
benchmark/nixlbench/: README.md  meson.build  meson_options.txt
benchmark/nixlbench/contrib/: Dockerfile
benchmark/nixlbench/src/: main.cpp
contrib/: Dockerfile  Dockerfile.manylinux  Dockerfile.sglang  Dockerfile.vllm  build-container.sh  build-wheel.sh
contrib/aws-efa/: aws_test.sh
docs/: BackendGuide.md  CodeStyle.md  nixl.md  telemetry.md
examples/cpp/: nixl_etcd_example.cpp  nixl_example.cpp  telemetry_reader.cpp
examples/device/ep/: README.md  meson.build
examples/python/: basic_two_peers.py  partial_md_example.py  telemetry_reader.py
src/api/cpp/: nixl.h  nixl_descriptors.h  nixl_params.h  nixl_types.h
src/api/python/: __init__.py  _api.py
src/bindings/python/: nixl_bindings.cpp
src/bindings/rust/: wrapper.cpp
src/core/: agent_data.h  meson.build  nixl_agent.cpp  nixl_enum_strings.cpp  nixl_listener.cpp  nixl_plugin_manager.cpp  plugin_manager.h  sync.h  transfer_request.h
src/core/telemetry/: buffer_plugin.cpp  telemetry.cpp  telemetry.h  telemetry_event.h
src/infra/: mem_section.h  nixl_descriptors.cpp  nixl_memory_section.cpp
src/plugins/: meson.build
src/plugins/azure_blob/: azure_blob_backend.cpp  azure_blob_client.cpp  azure_blob_client.h
src/plugins/cuda_gds/: README.md  gds_backend.cpp  gds_backend.h  gds_plugin.cpp  gds_utils.cpp  gds_utils.h
src/plugins/gds_mt/: gds_mt_backend.cpp  gds_mt_backend.h  gds_mt_plugin.cpp  gds_mt_utils.cpp  gds_mt_utils.h
src/plugins/gpunetio/: gpunetio_backend.cpp  gpunetio_backend.h  gpunetio_backend_aux.h  gpunetio_plugin.cpp  meson.build
src/plugins/gusli/: gusli_backend.cpp
src/plugins/hf3fs/: README.md  hf3fs_backend.cpp  hf3fs_backend.h  hf3fs_plugin.cpp  hf3fs_utils.cpp  hf3fs_utils.h
src/plugins/infinia/: README.md  infinia_backend.cpp  infinia_backend.h  infinia_client.cpp  infinia_client.h  infinia_example.conf  infinia_plugin.cpp  meson.build
src/plugins/libfabric/: libfabric_backend.cpp
src/plugins/mooncake/: mooncake_backend.cpp  mooncake_backend.h  mooncake_plugin.cpp
src/plugins/posix/: README.md  aio_queue.cpp  aio_queue.h  posix_backend.cpp  posix_backend.h  posix_plugin.cpp  posix_queue.h  queue_factory_impl.cpp  queue_factory_impl.h  uring_queue.cpp  uring_queue.h
src/plugins/telemetry/: README.md  meson.build
src/plugins/telemetry/doca/: README.md  doca_exporter.cpp  doca_exporter.h  doca_plugin.cpp  meson.build
src/plugins/telemetry/prometheus/: README.md  meson.build  prometheus_exporter.cpp  prometheus_exporter.h  prometheus_plugin.cpp
src/plugins/uccl/: uccl_backend.cpp  uccl_plugin.cpp
src/plugins/ucx/: connection.h  context.cpp  context.h  mem_list.cpp  meson.build  rkey.h  ucx_backend.cpp  ucx_backend.h  ucx_enums.cpp  ucx_enums.h  ucx_plugin.cpp  ucx_utils.cpp  ucx_utils.h
src/plugins/ucx_mo/: ucx_mo_backend.cpp  ucx_mo_backend.h  ucx_mo_plugin.cpp
src/utils/: meson.build
src/utils/common/: backend.h  config_traits.h  configuration.cpp  configuration.h  hw_info.cpp  hw_info.h  meson.build  toml_traits.h
src/utils/file/: README.md  file_path_mode.cpp  file_path_mode.h  (+1 more)
test/: meson.build
test/doca-telemetry/: loopback_connection.h  meson.build  scrape_util.h  telemetry_doca_nixl_test.cpp  telemetry_doca_test.cpp
test/gtest/: common.cpp  common.h  configuration.cpp  error_handling.cpp  hw_warning_test.cpp  main.cpp  meson.build  metadata_exchange.cpp  multi_threading.cpp  plugin_manager.cpp  telemetry_prometheus_test.cpp  telemetry_test.cpp  test_transfer.cpp  ucx_hw_warning_test.cpp
test/gtest/device_api/: agent.cpp  agent.h  mem_buffer.h  meson.build  single_write_test.cu  test.cu
test/gtest/mocks/: gmock_engine.cpp  gmock_engine.h  meson.build  mock_backend_engine.cpp  mock_backend_engine.h  mock_backend_plugin.cpp  mock_basic_plugin.cpp
test/gtest/plugins/: memory_handler.h  meson.build  obj_cuobj_plugin.cpp  obj_plugin.cpp
test/gtest/unit/: meson.build
test/gtest/unit/agent/: agent.cpp
test/gtest/unit/azure_blob/: azure_blob.cpp
test/gtest/unit/descriptors/: meson.build  sec_desc_list.cpp
test/nixl/: agent_example.cpp  desc_example.cpp  nixl_test.cpp  test_plugin.cpp
test/python/: test_nixl_api.py
test/unit/plugins/: meson.build  path_mode_common.h
test/unit/plugins/cuda_gds/: meson.build  nixl_gds_test.cpp
test/unit/plugins/gds_mt/: meson.build  nixl_gds_mt_test.cpp
test/unit/plugins/gpunetio/: nixl_gpunetio_stream_test.cu
test/unit/plugins/hf3fs/: meson.build  nixl_hf3fs_mt_test.cpp  nixl_hf3fs_test.cpp
test/unit/plugins/infinia/: infinia_nixl_test.cpp  meson.build
test/unit/plugins/mooncake/: mooncake_backend_test.cpp
test/unit/plugins/object/: meson.build  nixl_object_test.cpp
test/unit/plugins/posix/: meson.build  nixl_posix_test.cpp
test/unit/plugins/ucx/: meson.build  ucx_am_test.cpp  ucx_backend_multi.cpp  ucx_backend_test.cpp  ucx_worker_test.cpp
test/unit/plugins/ucx_mo/: ucx_mo_backend_test.cpp
test/unit/utils/: meson.build
test/unit/utils/libfabric/: libfabric_mock_stubs.h  libfabric_topology_test.cpp  meson.build  rail_active_refcount_test.cpp
test/unit/utils/libfabric/topo/: c5n.18xl-topo.xml
test/unit/utils/ucx/: meson.build  ucx_am_test.cpp  ucx_worker_test.cpp
(+73 files in other folders)
